[package]
name = "p2p"
version = "0.1.0"
authors = ["micim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stunclient = "0.1.2"
tokio = { version = "0.2.22", features = ["full", "io-util"] }
bs58 = "0.3.1"
futures = "0.3.5"