[package]
name = "p2p"
version = "0.1.0"
authors = ["micim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stunclient = "0.1.2"
tokio = { version = "0.2.22", features = ["full", "io-util"] }
tokio-util = {version = "0.3.1", features=["udp", "codec"]}
bs58 = "0.3.1"
futures = "0.3.5"
clipboard = "0.5.0"
bytes = "0.5.6"
clap = "2.33.3"